syntax = "proto3";

package billing;

option go_package = "proto;billing";

service Billing {
	rpc Portal(PortalRequest) returns (PortalResponse) {}
}

message PortalRequest {}

message PortalResponse {
	string url = 1;
}
